<resources>
    <string name="app_name">SpendTogether</string>

    <string name="buttonGuardar">Guardar</string>
    <string name="buttonAñadir">Añadir</string>

    <!--Groups  -->
    <string name="misGrupos">Mis grupos</string>
    <string name="nuevoGrupo">Nuevo grupo</string>
    <string name="categorias">Categorias</string>
    <string name="canales">Canales</string>

    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="participantes">Participantes</string>

    <string name="casa_compartida">Casa compartida</string>
    <string name="viaje">Viaje</string>
    <string name="celebracion">Celebración</string>
    <string name="evento">Evento</string>
    <string name="proyecto">Proyecto</string>
    <string name="otro">Otro</string>

    <!--Gastos -->
    <string name="nuevoGasto">Nuevo gasto</string>
    <string name="cantidad">Cantidad</string>
    <string name="pagadoPor">Pagado por</string>
    <string name="date">Fecha</string>

    <string name="gastos">Gastos</string>
    <string name="reembolsos">Reembolsos</string>
    <string name="lista_usuarios">Lista de usuarios y sus pagos:</string>




</resources>