<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:background="@color/group_background_card"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    >

    <!-- Widgets-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="44dp"
        android:text="@string/nuevoGasto"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:fontFamily="@font/amodhev"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/nameExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/nombre"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/descriptionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/cantidad"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quantity_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:textColor="@color/blanco"
            android:onClick="showDatePicker"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/participantsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagadoPor"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participantsTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/participantsAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:backgroundTint="@color/colorButton"
        android:layout_marginTop="40dp"
        android:text="Guardar" />

</LinearLayout>